archive/kubernetes/apps/default/vaultwarden/app/postgres-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden-postgres
  labels:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: postgres
spec:
  serviceName: vaultwarden-postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: vaultwarden
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: vaultwarden
        app.kubernetes.io/name: postgres
    spec:
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /var/lib/postgresql/data
