archive/kubernetes/apps/default/vaultwarden/app/vaultwarden-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/part-of: vaultwarden
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      restartPolicy: Always
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
            - containerPort: 3012
              name: websocket
