archive/kubernetes/apps/default/vaultwarden/app/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-postgres
  labels:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: postgres
    role: primary
spec:
  ports:
    - port: 5432
      protocol: TCP
      name: postgres-port
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-postgres-headless
  labels:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: postgres
spec:
  ports:
    - port: 5432
      protocol: TCP
      name: postgres-port
  clusterIP: None
  selector:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: postgres
