archive/kubernetes/apps/default/vaultwarden/app/vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: websocket
      port: 81
      targetPort: websocket
