archive/kubernetes/apps/default/vaultwarden/app/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: vaultwarden.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
          - path: /notifications/hub
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 81
  tls:
    - secretName: vaultwarden-tls
      hosts:
        - vaultwarden.fadhlika.com
